# vectorizer_api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: base_example.py
redis/: redis.conf
tests/: vectorizer_api_load_testing.ipynb
vectorServer/: app.py  models.py  schemas.py
vectorServer/utils/: downloader.py
